Fixing previews, and the broken button spacing on aside sections

--- a/app/components/aside_component/aside_component.scss
+++ b/app/components/aside_component/aside_component.scss
@@ -48,6 +48,7 @@
   
   .button {
     width: 250px;
+    margin-top: 1rem;
   }
 
   img {
